[JENKINS-55955] Remove JAXB dependency from Notification (#46)
* Refresh build

* Remove JAXB dependency